[options.entry_points]
console_scripts =
    nodeclass = nodeclass.cli.main:main

[metadata]
name = nodeclass
author = Andrew Pickford
author_email = andrewp@nikhef.nl
long_description = Nodeclass is an external node classifier for use with configuration management tools such as salt.
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = GPLv3
zip_safe = False

[bdist_rpm]
release = 7
packager = Andrew Pickford <andrewp@nikhef.nl>
build_requires = python3-devel python36-pbr
requires = python3 python36-pyparsing
