[metadata]
name = nodeclass
author = Andrew Pickford
author_email = andrewp@nikhef.nl
long_description = Nodeclass is an external node classifier for use with configuration management tools such as salt.
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = GPLv3
zip_safe = False

[options]
install_requires =
    packaging
    pyparsing

[options.entry_points]
console_scripts =
    nodeclass = nodeclass.cli.main:main

[options.extras_require]
git = pygit2>=0.28.2

[bdist_rpm]
release = 1
packager = Andrew Pickford <andrewp@nikhef.nl>
